Overflow fixed

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,16 +1,18 @@
 .home-page {
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 .home-page-image-wrapper {
   height: 100%;
+  position: relative;
 }
 
 .home-page-image {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
-  position: relative;
 }
 
 .home-page-image-overlay {
@@ -19,6 +21,7 @@
   height: 100%;
   position: absolute;
   top: 0;
+  left: 0;
 }
 
 .home-page-text {
